# epfl

./: .buildinfo  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .rhiza.env  .rhiza.history  Dockerfile  Makefile  README.md  Taskfile.yml  bash.sh  build.sh  config.py  docker-compose.yml  genindex.html  jupyter_notebook_config.py  objects.inv  pyproject.toml  requirements.txt  ruff.toml  search.html  searchindex.js  slides.py  start.bat  start.sh
.devcontainer/: README.md  bootstrap.sh  devcontainer.json
.github/: renovate.json  template.yml
.github/rhiza/: template.yml
.github/workflows/: age.yml  binder.yml  book.yml  codeql.yml  main.yml  maintain.yml  marimo.yml  pre-commit.yml  release.yml  rhiza_book.yml  rhiza_ci.yml  slides.yml  test_wasm.py  tests.yml
.rhiza/: history  template.yml
RISE-3.x/livereveal/: main.css
_sources/docs/: ConditionalValueAtRisk.ipynb  ConstructingARestimators.ipynb  LeveragedPortfolios.ipynb  index.md
binder/: Dockerfile
book/: _config.yml  _toc.yml
book/docs/: ConditionalValueAtRisk.ipynb  ConstructingARestimators.ipynb  LeveragedPortfolios.ipynb  LocationProblem.ipynb  Quant.ipynb  index.md  intro.ipynb
book/docs/cvx/: util.py
book/marimo/: ConditionalValueAtRisk.py  Conditional_Value_at_Risk.py  ConstructingARestimators.py  Constructing_AR_estimators.py  Intro.py  LeveragedPortfolios.py  Leveraged_Portfolios.py  LocationProblem.py  Location_Problem.py  MonteCarloPi.py  Monte_Carlo_Pi.py  Quant.py  ar2.py  ar3.py  ar4.py  ar5.py  demo.py  intro.py  regress.py
book/marimo/cvx/: util.py
book/marimo/public/: SPX_Index.csv
books/: ConditionalValueAtRisk.ipynb  Constructing AR estimators.ipynb  Leveraged portfolios.ipynb  LocationProblem.ipynb  Quant.ipynb  intro.ipynb
books/cvx/: util.py
books/talk/: config.py
docs/: ConditionalValueAtRisk.html  ConstructingARestimators.html  LeveragedPortfolios.html  index.html
notebooks/: Constructing_AR_estimators.py  Location_Problem.py
src/epfl/: __init__.py  signals.py
taskfiles/: build.yml  docs.yml  quality.yml
tests/: test_trivial.py  test_wasm.py  tests.mk
tests/test_rhiza/: test_makefile.py
work/: ConditionalValueAtRisk.ipynb  ConstructingARestimators.ipynb  Leveraged portfolios.ipynb  LeveragedPortfolios.ipynb  LocationProblem.ipynb  Quant.ipynb  intro.ipynb
