[project]
name = "epfl"
version = "0.1.0"
description = "Companion materials for an EPFL talk."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Thomas Schmelzer" }]
license = { file = "LICENSE" }
dependencies = [
    "numpy==2.3.0",
    "plotly==6.4.0",
    "clarabel==0.11.1",
    "cvxpy-base==1.7.3",
    "marimo==0.17.8",
    "statsmodels==0.14.5",
    "pandas==2.3.3",
]

[project.urls]
Homepage = "https://tschm.github.io/epfl/book"
Repository = "https://github.com/tschm/epfl"

[tool.deptry.per_rule_ignores]
#DEP001 = ["cvxpy"]
DEP002 = ["clarabel"] #, "cvxpy-base"]  # DEP002: Unused direct dependencies



[tool.deptry.package_module_name_map]
"cvxpy-base" = "cvxpy"
