[project]
name = "epfl"
version = "0.1.0"
description = "Companion materials for an EPFL talk."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Thomas Schmelzer" }]
license = { file = "LICENSE" }
dependencies = [
    "numpy==2.4.0",
    "plotly==6.5.1",
    "clarabel==0.11.1",
    "cvxpy-base==1.7.5",
    "marimo==0.18.4",
    "statsmodels==0.14.6",
    "pandas==2.3.3",
]

[project.urls]
Homepage = "https://tschm.github.io/epfl/book"
Repository = "https://github.com/tschm/epfl"

[tool.deptry.per_rule_ignores]
DEP002 = ["clarabel"]

[tool.deptry.package_module_name_map]
"cvxpy-base" = "cvxpy"
