[project]
name = "epfl"
version = "1.0.0"
description = "Companion materials for an EPFL talk."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Thomas Schmelzer" }]
license = { file = "LICENSE" }
dependencies = [
    "numpy==2.4.1",
    "plotly==6.5.2",
    "clarabel==0.11.1",
    "cvxpy-base==1.7.5",
    "marimo==0.19.6",
    "statsmodels==0.14.6",
    "pandas==3.0.0",
]
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://tschm.github.io/epfl/book"
Repository = "https://github.com/tschm/epfl"

[tool.deptry.per_rule_ignores]
DEP002 = ["clarabel", "statsmodels", "cvxpy-base"]

[tool.deptry.package_module_name_map]
"cvxpy-base" = "cvxpy"
numpy = "numpy"
plotly = "plotly"
clarabel = "clarabel"
marimo = "marimo"
statsmodels = "statsmodels"
pandas = "pandas"
